# LearnCmake

./: .gitignore  CMakeDoc.md  LICENSE  README.md
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/include/shared/: Hello.h
01-basic/E-installing/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
CMakePractise/: .gitignore
CMakePractise/02_FetchContent/: CMakeLists.txt  tutorial.cpp
CMakePractise/02_FetchContent/CMake/: spdlog.cmake
CMakePractise/Demo00/: CMakeLists.txt  tutorial.cpp
CMakePractise/Demo01/: CMakeLists.txt
CMakePractise/Demo01/include/: MathFunctions.h
CMakeTutorial/: CMakeLists.txt
CMakeTutorial/Step11/: CMakeLists.txt  tutorial.cpp
CMakeTutorial/Step11/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  mysqrt.h
CMakeTutorial/Step12/: CMakeLists.txt
CMakeTutorial/Step12/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
CMakeTutorial/Step1~3/: CMakeLists.txt
CMakeTutorial/Step1~3/MathFunctions/: CMakeLists.txt  mysqrt.cpp
CMakeTutorial/Step1~8/: CMakeLists.txt  tutorial.cpp
CMakeTutorial/Step9/: CMakeLists.txt
CMakeTutorial/Step9/MathFunctions/: CMakeLists.txt  mysqrt.cpp
